# RXT0112

./: .gitignore  .gitmodules  .gitpod.yml  .hadolint.yaml  .hadolint.yml  .markdownlint.json  .travis.yml  .travis.yml.krey  .vscode  Cargo.toml  LICENSE.md  LICENSE.new.md  Makefile  README.md  TODO  Zernit.drawio  bandit.yml  requirements.txt
src/RXT0112-1/: Cargo.toml  README.md
src/RXT0112-1/cd/: README.md
src/RXT0112-1/ci/: README.md
src/RXT0112-1/ci/circle-ci/: config.yml
src/RXT0112-1/ci/docker/dockerfiles/Debian/: debian_gcc.Dockerfile
src/RXT0112-1/ci/docker/dockerfiles/Exherbo/: exherbo_gcc.Dockerfile
src/RXT0112-1/ci/tests/HELL/: hell.sh
src/RXT0112-1/ci/tests/HELL/backend/: configure_backend.sh
src/RXT0112-1/downstream-classes/: README.md
src/RXT0112-1/downstream-classes/zeres-0/: README.md
src/RXT0112-1/downstream-classes/zeres-0/bash/: README.md  UNLEASH.sh  zernit.bashrc
src/RXT0112-1/downstream-classes/zeres-0/bash/identifiers/: README.md  hostname.sh  operating-system.sh
src/RXT0112-1/downstream-classes/zeres-0/bash/output/: die.sh  ebench.sh  edebug.sh  eerror.sh  efixme.sh  einfo.sh  elog.sh  ewarn.sh
src/RXT0112-1/downstream-classes/zeres-0/bash/output.experiment/: die.sh  ebench.sh  eerror.sh  einfo.sh  elog.sh  ewarn.sh
src/RXT0112-1/downstream-classes/zeres-0/bash/phases/: 00-fetch.sh  01-configure.sh  99-merge.sh  (+5 more)
src/RXT0112-1/downstream-classes/zeres-0/elisp/: README.md  UNLEASH.el
src/RXT0112-1/downstream-classes/zeres-0/ion/: README.md
src/RXT0112-1/downstream-classes/zeres-0/python/: README.md
src/RXT0112-1/downstream-classes/zeres-0/visualbasic/: README.md
src/RXT0112-1/downstream-classes/zeres-0/zsh/: README.md
src/RXT0112-1/modules/: README.md
src/RXT0112-1/scritps/: readme.sh  whitepaper.sh
src/RXT0112-1/subcoms/: README.md
src/RXT0112-1/subcoms/list/rustlang/: list.rs
src/RXT0112-1/vagrant/: README.md
(+154 files in other folders)
