# Reference https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "zernit"
description = "FIXME: description needed"
keywords = ["system-manager"]
version = "0.0.0"
authors = ["Kreyren <KostWarCZE@RiXotStudio.cz>"]
edition = "2018"

# FIXME: Implement automation that bumps the dependencies in a new commit to make it easier to track dependency-caused issues
[dependencies]
# FIXME: Replace with latest once development is in gold
clap = "2.33.0"
# Used for repository management as alternative to 'make'
cargo-make = "0.30.0"
# Used for reading toml files
toml = "0.5.6"
# Custom logging solution
zernit-logger = { path = "src/libs/rustlang/zernit-logger" }

[dev-dependencies]
# Used for benchmarking
criterion = "0.3.1"

[[bench]]
name = "example_bench"
harness = false